2009-06-04  Miloslav Trmač  <mitr@redhat.com>

	* lib/ui.c (libvk_ui_set_generic_cb, libvk_ui_set_passphrase_cb)
	(libvk_ui_set_nss_pwfn_arg): Free the previous data before overwriting
	it.
	* lib/libvolume_key.h: Update comments.

	* lib/libvolume_key.c (libvk_volume_create_packet_cleartext)
	(libvk_volume_create_packet_assymetric)
	(libvk_volume_create_packet_with_passphrase)
	* lib/volume.c (libvk_volume_get_secret)
	(libvk_volume_add_secret): Reject invalid negative enum libvk_secret
	values if the enum is compatible with a signed type.

2009-06-03  Miloslav Trmač  <mitr@redhat.com>

	* README: Write it.

	* po/Makevars (MSGID_BUGS_ADDRESS): Update.

	* configure.ac: Release 0.1.

	* tests/crypto_roundtrips.sh: Fix line wrapping.

2009-05-25  Miloslav Trmač  <mitr@redhat.com>

	* po/LINGUAS: Add "pl".

2009-05-25  Piotr Drąg <piotrdrag@gmail.com>

	* po/pl.po: New Polish translation.